--- a/client/src/pages/competitions/competitions.css
+++ b/client/src/pages/competitions/competitions.css
@@ -1,6 +1,6 @@
-.competitions {
+/* .competitions {
     width: 850px;
     display: flex;
     justify-content: space-between;
     margin: 30px auto;
-}
+} */
